# RoleBot

./: README.md  pyproject.toml  streamlit_ui.py
app/: main.py
app/schemas/: chat.py
app/services/: auth_service.py  retriever_service.py  vector_store.py
app/utils/: user_db.py
vector_data/: engineering_docs.pkl  engineering_index.faiss  finance_docs.pkl  finance_index.faiss  general_docs.pkl  general_index.faiss  hr_docs.pkl  hr_index.faiss  marketing_docs.pkl  marketing_index.faiss
